--- a/styles/__index.scss
+++ b/styles/__index.scss
@@ -6,22 +6,22 @@
 @import "base.scss";
 @import "_grid.scss";
 @import "_typography.scss";
-@import "loader.scss";
+//@import "loader.scss";
 
 // Layout (l_*.scss)
 @import "l_icons.scss";
-@import "l_header.scss";
-@import "l_footer.scss";
-@import "l_sidebar.scss";
+//@import "l_header.scss";
+//@import "l_footer.scss";
+//@import "l_sidebar.scss";
 
 // Components (c_*.scss)
-@import "c_checkbox-n-radio.scss";
-@import "c_navigation.scss";
-@import "c_tabs.scss";
-@import "c_accordian.scss";
-@import "c_card.scss";
-@import "c_card-list.scss";
-@import "c_img-upload.scss";
+//@import "c_checkbox-n-radio.scss";
+//@import "c_navigation.scss";
+//@import "c_tabs.scss";
+//@import "c_accordian.scss";
+//@import "c_card.scss";
+//@import "c_card-list.scss";
+//@import "c_img-upload.scss";
 @import "_utility.scss";
 @import "_dark.scss";
-@import "c_toast.scss";
+//@import "c_toast.scss";
