--- a/styles/_grid.scss
+++ b/styles/_grid.scss
@@ -31,6 +31,9 @@
 
   }
 }
+.page-container {
+  padding-bottom: 10rem;
+}
 .page-container--dashboard {
   background-color: #f9f4fb;
   min-height: 100vh;
